syntax = "proto3";

package auth.v1;

option go_package = "server/interfaces/proto/auth/v1;authv1";

message UserRequest {
  string user_name = 1;
  string password = 2;
}

message UserResponse {
  string user_name = 1;
  string token = 2;
}

service AuthService {
  rpc CreateUser(UserRequest) returns (UserResponse) {}
  rpc Login(UserRequest) returns (UserResponse) {}
}
